--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -79,6 +79,7 @@
           	<option value="" disabled selected>선택하세요</option>
           	<option value="nurse">간호사</option>
           	<option value="caregiver">요양보호사</option>          	
+          	<option value="manager">관리자</option>          	
           </select>
         </div>
 
